[bug fix] Switch styles in dark mode

--- a/resources/sass/components/switch.scss
+++ b/resources/sass/components/switch.scss
@@ -32,7 +32,7 @@
     }
 
     @include light {
-      border: 2px solid $rose-200;
+      border: 2px solid $gray-300;
     }
 
     @include dark {
